# NAT_Traversal

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  QUICKSTART.md  README.md  TESTING.md  verify-deployment.sh  wsl-deploy.sh
.github/: claude-review-setup.md
.github/slash-commands/: README.md
.github/workflows/: ci.yml  claude-code-review.yml  claude-review.yml  claude.yml
client/: Cargo.toml
client/src/: config.rs  connection.rs  core.rs  gui.rs  main.rs
common/: Cargo.toml
common/src/: config.rs  crypto.rs  error.rs  lib.rs  protocol.rs
platform/: Cargo.toml
platform/src/: lib.rs  linux.rs  service.rs  windows.rs
server/: Cargo.toml
server/src/: config.rs  connection.rs  main.rs  server.rs  tunnel.rs
