[workspace]
resolver = "2"
members = [
    "common",
    "server", 
    "client",
    "platform"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/nat-traversal"
readme = "README.md"
keywords = ["nat", "traversal", "proxy", "tunnel", "networking"]
categories = ["network-programming", "command-line-utilities"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Networking and security
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
directories = "5.0"

# Cryptography
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = "1.0"
hex = "0.4"

# GUI (for client)
egui = "0.23"
eframe = "0.23"
rfd = "0.12"

# Platform-specific dependencies (these will be added in individual crate Cargo.toml files)
# winapi = { version = "0.3", features = ["winuser", "winsvc"] }
# windows-service = "0.6"
# nix = "0.27"
winapi = { version = "0.3", features = ["winuser", "winsvc"] }
windows-service = "0.6"
nix = "0.27"
libc = "0.2"
webpki-roots = "0.25"