[package]
name = "nat-traversal-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "nat-server"
path = "src/main.rs"

[dependencies]
nat-traversal-common = { path = "../common" }

# Core dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# Serialization and config
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling and logging  
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

# CLI and utilities
clap = { workspace = true }
directories = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }